--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ maven_group=com.examplemod
 
 fabric_loader_version=0.14.22
 fabric_api_version=0.90.4
+modmenu_version=8.0.0
 
 forge_version=48.0.30
 
