--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,2 @@
-org.gradle.jvmargs=-Xmx2G
-
-minecraft_version=1.20.2
-
-archives_base_name=ExampleMod
-mod_version=1.0
-maven_group=com.examplemod
-
-fabric_loader_version=0.14.24
-fabric_api_version=0.90.4
-modmenu_version=8.0.0
-
-forge_version=48.0.33
-
-parchment=2023.10.22
+# Gradle
+org.gradle.jvmargs=-Xmx3G
