--- a/modules/1.20.2-multiloader-mixins/gradle.properties
+++ b/modules/1.20.2-multiloader-mixins/gradle.properties
@@ -1,17 +1,22 @@
-org.gradle.jvmargs=-Xmx2G
-
-project_path=modules:1.20.2-multiloader-mixins
-
-minecraft_version=1.20.2
-
+# Project
+project_path=modules:1.20.2-multiloader
 archives_base_name=ExampleMod
-mod_version=1.0
 maven_group=com.examplemod
 
+# Mod
+mod_version=1.0
+
+# Minecraft
+minecraft_version=1.20.2
+
+# Fabric
 fabric_loader_version=0.14.24
 fabric_api_version=0.90.4
 modmenu_version=8.0.0
 
+# Forge
 forge_version=48.0.33
 
+# Other
 parchment=2023.10.22
+org.gradle.jvmargs=-Xmx2G
