Fix multiloader-mixins project_path

--- a/modules/1.20.2-multiloader-mixins/gradle.properties
+++ b/modules/1.20.2-multiloader-mixins/gradle.properties
@@ -1,5 +1,5 @@
 # Project
-project_path=modules:1.20.2-multiloader
+project_path=modules:1.20.2-multiloader-mixins
 archives_base_name=ExampleMod
 maven_group=com.examplemod
 
