--- a/modules/1.20.2-multiloader-mixins/gradle.properties
+++ b/modules/1.20.2-multiloader-mixins/gradle.properties
@@ -4,18 +4,41 @@ archives_base_name=ExampleMod
 maven_group=com.examplemod
 
 # Mod
+mod_name=Example Mod
+mod_author=Mod Author
+mod_id=examplemod
 mod_version=1.0
+mod_description=The description of your mod. \nAccepts multilines.
+mod_licence=GPL-3.0
+mod_group=com.example
 
 # Minecraft
 minecraft_version=1.20.2
+minecraft_pack_version=15
 
 # Fabric
+# https://fabricmc.net/develop
 fabric_loader_version=0.14.24
 fabric_api_version=0.90.4
 modmenu_version=8.0.0
 
+fabric_minecraft_version_range=>=1.20.2
+fabric_loader_version_range=>=0.14
+
 # Forge
+# https://files.minecraftforge.net/
 forge_version=48.0.33
+
+forge_loader_version_range=[48,)
+forge_version_range=[48,)
+forge_minecraft_version_range=[1.20.2]
+
+# Misc
+home_page=https://examplemod.com/
+#modrinth_page=https://modrinth.com/mod/example-mod
+#curseforge_page=https://curseforge.com/minecraft/mc-mods/example-mod
+source_page=https://github.com/author/example-mod
+issues_page=https://github.com/author/example-mod/issues
 
 # Other
 parchment=2023.10.22
