Added metadata to mixins files

--- a/modules/1.20.2-multiloader-mixins/gradle.properties
+++ b/modules/1.20.2-multiloader-mixins/gradle.properties
@@ -6,6 +6,7 @@ maven_group=com.examplemod
 # Mod
 mod_name=Example Mod
 mod_author=Mod Author
+# When changing mod_id, you also should change the files names in `src/main/resources` inside common, fabric and forge
 mod_id=examplemod
 mod_version=1.0
 mod_description=The description of your mod. \nAccepts multilines.
