--- a/modules/1.20.2-multiloader/gradle.properties
+++ b/modules/1.20.2-multiloader/gradle.properties
@@ -6,15 +6,20 @@ maven_group=com.examplemod
 # Mod
 mod_name=Example Mod
 mod_author=Mod Author
+# When changing mod_id, you should also change:
+# - Files names at `{common, fabric, forge}/src/main/resources`
+# - `MOD_ID` var at `common/src/main/java/com/example/examplemod/ExampleMod.java`
 mod_id=examplemod
 mod_version=1.0
 mod_description=The description of your mod. \nAccepts multilines.
 mod_licence=GPL-3.0
+# When changing mod_group, you should also change:
+# - Folder structure at `{common, fabric, forge}/src/main/java` 
 mod_group=com.example
 
 # Minecraft
 minecraft_version=1.20.2
-minecraft_pack_version=15
+minecraft_pack_version=18
 
 # Fabric
 # https://fabricmc.net/develop
