Added mod_class to gradle.properties

--- a/modules/1.20.2-multiloader-mixins/gradle.properties
+++ b/modules/1.20.2-multiloader-mixins/gradle.properties
@@ -13,6 +13,9 @@ mod_id=examplemod
 mod_version=1.0
 mod_description=The description of your mod. \nAccepts multilines.
 mod_licence=GPL-3.0
+# When changing mod_class, you should also change:
+# - `ExampleMod.java` file name at `{common, fabric, forge}/src/main/java/com/example/examplemod` 
+mod_class=ExampleMod
 # When changing mod_group, you should also change:
 # - Folder structure at `{common, fabric, forge}/src/main/java` 
 mod_group=com.example
