--- a/modules/1.20.2-multiloader/gradle.properties
+++ b/modules/1.20.2-multiloader/gradle.properties
@@ -28,6 +28,7 @@ minecraft_pack_version=18
 # https://fabricmc.net/develop
 fabric_loader_version=0.14.24
 fabric_api_version=0.90.4
+# ModMenu: https://modrinth.com/mod/modmenu/versions
 modmenu_version=8.0.0
 
 fabric_minecraft_version_range=>=1.20.2
@@ -49,5 +50,6 @@ source_page=https://github.com/author/example-mod
 issues_page=https://github.com/author/example-mod/issues
 
 # Other
+# ParchmentMC: https://github.com/ParchmentMC/Parchment/tags
 parchment=2023.10.22
 org.gradle.jvmargs=-Xmx2G
